# tutorial-complete-fastapi-masterclass-instagram-clone-project

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  justfile  pyproject.toml  setup.cfg
app/: main.py
cors-app/: README.md  package-lock.json  package.json
cors-app/src/: App.js
src/app/: exceptions.py  main.py  schemas.py
src/app/auth/: authentication.py  oauth2.py
src/app/crud/: articles.py  users.py
src/app/db/: database.py  db_article.py  db_user.py  engines.py  models.py
src/app/db/migrations/: env.py
src/app/db/migrations/versions/: a8b97632304f_.py  ae2ae9515a19_.py  f0de5d1a1d79_.py
src/app/db/schemas/: all.py  base.py  users.py
src/app/init/: setup.py
src/app/models/: main.py
src/app/routers/: article.py  blog_get.py  blog_post.py  product.py  user.py
src/app/utilities/: hash.py  routers.py
src/tests/: conftest.py  test_main.py
src/tests/routers/: test_article.py  test_product.py  test_user.py
src/tests/strategies/: __init__.py  strategies.py  test_strategies.py  test_user.py  user.py
